Bug 90024 - Conditional formats are no longer sorted
Summary: Conditional formats are no longer sorted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-15 17:10 UTC by Lenge
Modified: 2015-12-17 08:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (7.04 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-03-15 17:50 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lenge 2015-03-15 17:10:17 UTC
Format\Conditional Formatting\Manage... delivers a list of all conditionally formatted cell ranges on the current sheet.

Before LibreOffice 4.4, this list was automatically sorted according to the cell range addresses, so that specific range was easy to find even in long lists. When a list entry was edited and its cell range was changed, the list was immediately sorted again.

With Version 4.4.1.2, the ranges seems to be displayed in arbitrary order and no longer sorted, which makes it hard to manage longer lists.

Seems to be a regression. Could you please restore the sorting?
Comment 1 raal 2015-03-15 17:50:15 UTC
Created attachment 114112 [details]
test file

I can confirm with Version: 4.5.0.0.alpha0+
Build ID: 7f3628e54d4470cac6d51659d1b1bec5fb4f4e70
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-03-14_00:35:32

Works in LO 4.3.3 -> regression
Comment 2 Matthew Francis 2015-03-16 03:19:28 UTC
This seems to have changed as of the below commit.
Adding Cc: to palenik.mihaly@gmail.com; Could you possibly take a look at this? Thanks

    commit f92ab4da51647a4353038b1c56b70db3672c49cf
    Author:     Palenik Mihály <palenik.mihaly@gmail.com>
    AuthorDate: Wed Oct 22 19:01:05 2014 +0200
    Commit:     Andras Timar <andras.timar@collabora.com>
    CommitDate: Thu Oct 30 13:03:44 2014 +0000
    
        Improve SvSimpleTable class
    
        It is possible to order columns. This is set in Expert Configuration
        dialog. The header's itembits weren't set correctly therefore mouse
        click handler didn't do anything. The comparsion was slow on big
        table.
Comment 4 Robinson Tryon (qubit) 2015-12-17 08:49:08 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]