tdf#90024: Don't set compare handler in constructor

it breaks sorting of conditional formatting manager table.
This reverts part of commit f92ab4da51647a4353038b1c56

Change-Id: I22d4b939cf888451bff6500fdf0d6b900903deb1